some work to the background section of the report

--- a/report/bibliography/bibliography.bib
+++ b/report/bibliography/bibliography.bib
@@ -8,8 +8,40 @@
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
+@article{holland,
+  author={Holland, John},
+  year={1975},
+  title={Adaptation in Natural and Artificial Systems}}
+
 @misc{openai,
     title={Ingredients for Robotics Research},
     author={OpenAI},
     howpublished="\url{https://openai.com/blog/ingredients-for-robotics-research/}",
     note="[Online; Accessed 19-04-2022]"}
+
+
+@article{pawelczyk,
+    author = {Pawelczyk, Krzysztof and Kawulok, Michal and Nalepa, Jakub},
+    title = {Genetically-Trained Deep Neural Networks},
+    year = {2018},
+    isbn = {9781450357647},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    url = {https://doi.org/10.1145/3205651.3208763},
+    doi = {10.1145/3205651.3208763}}
+
+
+@article{gomez,
+    author="Gomez, Faustino and Schmidhuber, J{\"u}rgen and Miikkulainen, Risto",
+    title="Efficient Non-linear Control Through Neuroevolution",
+    year="2006",
+    publisher="Springer Berlin Heidelberg",
+    address="Berlin, Heidelberg",
+    pages="654--662",
+    isbn="978-3-540-46056-5"
+}
+
+@article{lazaric,
+  author={Alessandro Lazaric},
+  title={Transfer in Reinforcement Learning: a Framework and a Survey},
+  year={2013}}
