some more work on the design section of the report

--- a/report/body/design.tex
+++ b/report/body/design.tex
@@ -1,9 +1,7 @@
 \chapter{Design}
 
-"How you designed the environment and agents in order to address the question"
+OpenAI Gym is a toolkit for reinforcement learning research. It includes a growing collection of benchmark problems that expose a common interface (2016, \cite{gym}). OpenAI Gym focuses on the episodic setting of reinforcement learning, where the agent's experience is broken down into a series of episodes. In each episode the agent's initial state is randomly sampled from a distribution, and the interaction proceeds until the environment reaches a terminal state. The robotics environments that are used in this project are defined using MuJoCo, a python library for advanced physisc simulation \cite{mujoco}. OpenAI Gym does not include a built-in agent, so this will have to be built from scratch.
 
-
-Perhaps I could talk about OpenAI Gym underlying implementation, but might not be neccessary, perhaps just that they use mujoco to define it - could talk about that.
 
 
 Main section of this project would be Agent architecture (however this is relatively basic).
