--- a/report/bibliography/bibliography.bib
+++ b/report/bibliography/bibliography.bib
@@ -8,6 +8,32 @@
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
+@misc{mujoco,
+ title={Mujoco},
+ author={DeepMind},
+ howpublished="\url{https://mujoco.org/}",
+ note="[Online; Accessed 20-04-22]"}
+
+@article{gym,
+  author    = {Greg Brockman and
+               Vicki Cheung and
+               Ludwig Pettersson and
+               Jonas Schneider and
+               John Schulman and
+               Jie Tang and
+               Wojciech Zaremba},
+  title     = {OpenAI Gym},
+  journal   = {CoRR},
+  volume    = {abs/1606.01540},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1606.01540},
+  eprinttype = {arXiv},
+  eprint    = {1606.01540},
+  timestamp = {Fri, 08 Nov 2019 12:51:06 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/BrockmanCPSSTZ16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{holland,
   author={Holland, John},
   year={1975},
