--- a/report/bibliography/bibliography.bib
+++ b/report/bibliography/bibliography.bib
@@ -71,3 +71,9 @@
   author={Alessandro Lazaric},
   title={Transfer in Reinforcement Learning: a Framework and a Survey},
   year={2013}}
+
+@article{mnih,
+        author={Mnih, V and Kavukcouglum, K and Silver, D},
+        title={Human Level Control through deep reinforcement learning},
+        year={2015},
+        doi={https://doi.org/10.1038/nature14236}}
