--- a/report/body/evaluation.tex
+++ b/report/body/evaluation.tex
@@ -1,3 +1,14 @@
 \chapter{Evaluation}
 
 \label{ch:eval}
+
+\section{Training on Space Invaders}
+
+Using the determined operators and rates, the final set of models were trained. In this case, the environment was experienced 20 times per agent per generation, and the lives were no longer limited to 1 - the agent would play until the game was finished. This was tested for 30 generations, and the population contained 20 agents. The result can be seen in Fig. N.
+
+\section{Transfer Learning}
+
+The comparison between an agent performing random actions and the best agent taken from the final generation from the Space Invaders training for both new environments can be seen in Fig. N. From these results we can say that ...........
+
+
+**IF PREVIOUS TEST DOESN'T SHOW SIGNIFICANT IMPROVEMENT THEN DO THE HOW MANY GENERATIONS TO CONVERGE TEST**
