--- a/report/thesis.tex
+++ b/report/thesis.tex
@@ -8,7 +8,7 @@
 
 \begin{document}
 
-\title{Neuro-Evolution and Transfer Learning on OpenAIs Shadow Hand Environments}
+\title{Neuro-Evolution and Transfer Learning on OpenAIs Atari Environments}
 
 \author{Thomas Cotter}
 \submitdate{May 2022}
@@ -18,9 +18,7 @@
 \normallinespacing
 \maketitle
 
-
 \preface
-\input{abstract/abstract}
 
 
 \body
